--- a/si-korean.tex
+++ b/si-korean.tex
@@ -86,16 +86,16 @@ Polite      &  \multicolumn{4}{c}{\korean{아/어/요}}  \\
             & \multicolumn{4}{c}{-\textsc{eo}$_7$-\textsc{yo}$_8$} \\ \hline
 Semi-Formal & \korean{오/소}   &           &   \korean{오}       &  \korean{-ㅂ-지다} \\
 &  -o/so   &           & -o        & -p-sida \\
- &  -O$_7$/-SO$_7$   &           & -O$_7$    & -\textsc{p}$_5$-\textsc{sida}$_7$ \\\hline
+	&  -\textsc{o}$_7$/-\textsc{so}$_7$   &           & -\textsc{o}$_7$    & -\textsc{p}$_5$-\textsc{sida}$_7$ \\\hline
 Familiar    &    \korean{네}    &  \korean{나/는가} &  \korean{게}      &    \korean{세} \\
             & -ne                  & -na/neunka & -ge & -se \\ 
-	    & -\textsc{ne}$_7$                  & -\textsc{na}$_7$/-\textsc{neunka}$_7$ & -\textsc{ge}$_9$ & \textsc{-SE}$_9$ \\ \hline
+	    & -\textsc{ne}$_7$                  & -\textsc{na}$_7$/-\textsc{neunka}$_7$ & -\textsc{ge}$_9$ & \textsc{-se}$_9$ \\ \hline
 Intimate      &  \multicolumn{4}{c}{\korean{아/어}}  \\
       &  \multicolumn{4}{c}{-a/eo}  \\
             & \multicolumn{4}{c}{-\textsc{eo}$_7$} \\ \hline
 Plain       &   \korean{다}     &  \korean{(느)냐} &  \korean{라}     &  \korean{자}\\
             &  -da    &  -(neu)nya & -ra      & -ja \\
-            & -\textsc{da}$_7$    &   -\textsc{nya}$_7$          & -RA$_7$      & -JA$_7$\\
+	    & -\textsc{da}$_7$    &   -\textsc{nya}$_7$          & -\textsc{ra}$_7$      & -\textsc{ja}$_7$\\
 \end{tabular}
 	\end{center}
 \caption{Correspondence between our morpheme segmentation and the speech style system described by \citep[4.3.2]{yeon2010korean}. In each cell, we provide the Hangul ending given by \citep{yeon2010korean}, a transliteration, and a representation in terms of underlying morphemes.}\label{tab:korean-styles}
