--- a/si.tex
+++ b/si.tex
@@ -161,41 +161,41 @@ In the Finnish corpus, verb forms are annotated using collections of features, s
 \begin{table}
 \begin{tabular}{l|llllll}
 	TAM & Agreement & Form & Suffixes \\ \hline\hline
-	present tense & 	1st sing& 	tulen  & -n$_4$\\ 
-	\cite[Section 24]{karlsson1999finnish}	&	2nd sing. 	& 	tulet  & -t$_4$\\ 
-	&	3rd sing. 	& 	tulee  & -V$_4$\\                
-	&	1st plur. 	& 	tulemme  &-mme$_4$\\ 
-	&	2nd plur. 	& 	tulette  &-tte$_4$\\ 
-	&	3rd plur. 	& 	tulevat  &-vat$_4$\\ 
-	&	passive 	& 	tullaan  &-t$_1$-Vn$_4$ \\  \hline
-past tense 	 	&	1st sing.& 	tulin & -i$_2$-n$_4$\\  
-	Karlsson section 60&	2nd sing. &	tulit  & -i$_2$-t$_4$\\ 
-	&	3rd sing. &	tuli  & -i$_2$-V$_4$\\ 
-	&	1st plur. &	tulimme  &-i$_2$-mme$_4$\\ 
-	&	2nd plur. &	tulitte  &-i$_2$-tte$_4$\\ 
-	&3rd plur. &	tulivat  & -i$_2$-vat$_4$\\ 
-	&	passive &	tultiin  &-t$_1$-i$_2$-Vn$_4$ \\  \hline
-conditional mood  &1st sing. &	tulisin  & -isi$_3$-n$_4$\\ 
-	(-isi-, \cite[Section 65]{karlsson1999finnish})	&2nd sing. &	tulisit  & -isi$_3$-t$_4$\\ 
-	&3rd sing. &	tulisi  & -isi$_3$-V$_4$\\ 
-	&1st plur. &	tulisimme  & -isi$_3$-mme$_4$\\ 
-	&2nd plur. &	tulisitte  & -isi$_3$-tte$_4$\\ 
-	&3rd plur. &	tulisivat  & -isi$_3$-vat$_4$ \\ 
-	&passive &	tultaisiin  & -ta$_1$-isi$_3$-Vn$_4$\\  \hline
+	present tense & 	1st sing& 	tulen  & -n$_{\textsc{Agr}}$\\ 
+	\cite[Section 24]{karlsson1999finnish}	&	2nd sing. 	& 	tulet  & -t$_{\textsc{Agr}}$\\ 
+	&	3rd sing. 	& 	tulee  & -V$_{\textsc{Agr}}$\\                
+	&	1st plur. 	& 	tulemme  &-mme$_{\textsc{Agr}}$\\ 
+	&	2nd plur. 	& 	tulette  &-tte$_{\textsc{Agr}}$\\ 
+	&	3rd plur. 	& 	tulevat  &-vat$_{\textsc{Agr}}$\\ 
+	&	passive 	& 	tullaan  &-t$_{\textsc{Passive}}$-Vn$_{\textsc{Agr}}$ \\  \hline
+past tense 	 	&	1st sing.& 	tulin & -i$_{\textsc{TAM}}$-n$_{\textsc{Agr}}$\\  
+	Karlsson section 60&	2nd sing. &	tulit  & -i$_{\textsc{TAM}}$-t$_{\textsc{Agr}}$\\ 
+	&	3rd sing. &	tuli  & -i$_{\textsc{TAM}}$-V$_{\textsc{Agr}}$\\ 
+	&	1st plur. &	tulimme  &-i$_{\textsc{TAM}}$-mme$_{\textsc{Agr}}$\\ 
+	&	2nd plur. &	tulitte  &-i$_{\textsc{TAM}}$-tte$_{\textsc{Agr}}$\\ 
+	&3rd plur. &	tulivat  & -i$_{\textsc{TAM}}$-vat$_{\textsc{Agr}}$\\ 
+	&	passive &	tultiin  &-t$_{\textsc{Passive}}$-i$_{\textsc{TAM}}$-Vn$_{\textsc{Agr}}$ \\  \hline
+conditional mood  &1st sing. &	tulisin  & -isi$_{\textsc{TAM}}$-n$_{\textsc{Agr}}$\\ 
+	(-isi-, \cite[Section 65]{karlsson1999finnish})	&2nd sing. &	tulisit  & -isi$_{\textsc{TAM}}$-t$_{\textsc{Agr}}$\\ 
+	&3rd sing. &	tulisi  & -isi$_{\textsc{TAM}}$-V$_{\textsc{Agr}}$\\ 
+	&1st plur. &	tulisimme  & -isi$_{\textsc{TAM}}$-mme$_{\textsc{Agr}}$\\ 
+	&2nd plur. &	tulisitte  & -isi$_{\textsc{TAM}}$-tte$_{\textsc{Agr}}$\\ 
+	&3rd plur. &	tulisivat  & -isi$_{\textsc{TAM}}$-vat$_{\textsc{Agr}}$ \\ 
+	&passive &	tultaisiin  & -ta$_{\textsc{Passive}}$-isi$_{\textsc{TAM}}$-Vn$_{\textsc{Agr}}$\\  \hline
 	imperative mood  &1st sing. &	-- \\ 
 	 \cite[Section 66]{karlsson1999finnish}	 & 2nd sing. &	tule & - \\ 
-	&	3rd sing. &	tulkoon  & -koon\\ 
-	&	1st plur. &	tulkaamme  & -kaamme\\ 
-	&	2nd plur. &	tulkaa   & -kaa\\ 
-	&	3rd plur. 	&tulkoot  & -koot\\ 
-	&	passive 	&tultakoon  & -takoon\\ \hline
-	potential mood 	 &	1st sing. &	tullen  & -ne$_3$-n$_4$\\ 
-		(-ne-, \cite[Section 67]{karlsson1999finnish}) & 2nd sing. &	tullet  & -ne$_3$-t$_4$\\ 
-	&	3rd sing. &	tullee  & -ne$_3$-V$_4$\\ 
-	&	1st plur. &	tullemme  & -ne$_3$-mme$_4$\\ 
-	&	2nd plur. &	tullette  & -ne$_3$-tte$_4$\\ 
-	&	3rd plur. &	tullevat  & -ne$_3$-vat$_4$\\ 
-	&	passive &	tultaneen  & -t$_1$-ne$_3$-Vn$_4$ \\ \hline
+	&	3rd sing. &	tulkoon  & -kV$_{\textsc{TAM}}$-oon$_{\textsc{Agr}}$\\ 
+	&	1st plur. &	tulkaamme  & -kV$_{\textsc{TAM}}$-mme$_{\textsc{Agr}}$\\ 
+	&	2nd plur. &	tulkaa   & -kV$_{\textsc{TAM}}$\\ 
+	&	3rd plur. 	&tulkoot  & -kV$_{\textsc{TAM}}$-vat$_{\textsc{Agr}}$\\ 
+	&	passive 	&tultakoon  & -ta$_{\textsc{Passive}}$-kV$_{\textsc{TAM}}$-Vn$_{\textsc{Agr}}$\\ \hline
+	potential mood 	 &	1st sing. &	tullen  & -ne$_{\textsc{TAM}}$-n$_{\textsc{Agr}}$\\ 
+		(-ne-, \cite[Section 67]{karlsson1999finnish}) & 2nd sing. &	tullet  & -ne$_{\textsc{TAM}}$-t$_{\textsc{Agr}}$\\ 
+	&	3rd sing. &	tullee  & -ne$_{\textsc{TAM}}$-V$_{\textsc{Agr}}$\\ 
+	&	1st plur. &	tullemme  & -ne$_{\textsc{TAM}}$-mme$_{\textsc{Agr}}$\\ 
+	&	2nd plur. &	tullette  & -ne$_{\textsc{TAM}}$-tte$_{\textsc{Agr}}$\\ 
+	&	3rd plur. &	tullevat  & -ne$_{\textsc{TAM}}$-vat$_{\textsc{Agr}}$\\ 
+	&	passive &	tultaneen  & -t$_{\textsc{Passive}}$-ne$_{\textsc{TAM}}$-Vn$_{\textsc{Agr}}$ \\ \hline
 \end{tabular}
 	\caption{Finnish verb inflection}\label{tab:finnish}
 \end{table}
@@ -212,24 +212,24 @@ In Figure~\ref{tab:turkish-yapmak}, we show how our segmentation corresponds to 
 \begin{tabular}{ll||lll|lllllllllll}
          &        & 1 sg.      & 2   sg.     & 3  sg.      & 1  pl.    & 2 pl.     & 3 pl. \\ \hline\hline
  DNP & A & yaparım & yaparsın &  	yapar & yaparız & yaparsınız &  	yaparlar \\
-                    &  & -\textsc{ar}$_6$-\textsc{im}$_{10}$ & -\textsc{ar}$_6$-\textsc{sin}$_{10}$ &  	-\textsc{ar}$_6$ & -\textsc{ar}$_6$-\textsc{iz}$_{10}$ & -\textsc{ar}$_6$-\textsc{siniz}$_{10}$ &  	-\textsc{ar}$_6$-\textsc{lar}$_{7}$ \\ \hline
+                    &  & -\textsc{ar}$_5$-\textsc{im}$_8$ & -\textsc{ar}$_5$-\textsc{sin}$_8$ &  	-\textsc{ar}$_5$ & -\textsc{ar}$_5$-\textsc{iz}$_8$ & -\textsc{ar}$_5$-\textsc{siniz}$_8$ &  	-\textsc{ar}$_5$-\textsc{lar}$_6$ \\ \hline
                 & I & yapıyorum & yapıyorsun & 	yapıyor &	yapıyoruz &	yapıyorsunuz &	yapıyorlar \\
-		&  & -\textsc{iyor}$_6$-UM & -\textsc{iyor}$_6$-\textsc{sin}$_{10}$ & 	-\textsc{iyor}$_6$ &	-\textsc{iyor}$_6$-\textsc{uz} &	-\textsc{iyor}$_6$-\textsc{siniz}$_{10}$ &	-\textsc{iyor}$_6$-\textsc{lar}$_{7}$ \\ \hline
+		&  & -\textsc{iyor}$_5$-\textsc{im}$_8$ & -\textsc{iyor}$_5$-\textsc{sin}$_8$ & 	-\textsc{iyor}$_5$ &	-\textsc{iyor}$_5$-\textsc{iz}$_8$ &	-\textsc{iyor}$_5$-\textsc{siniz}$_8$ &	-\textsc{iyor}$_5$-\textsc{lar}$_6$ \\ \hline
                 & Pr  & yapacağım &	yapacaksın 	& yapacak 	& yapacağız &	yapacaksınız &	yapacaklar \\ 
-                &   & -\textsc{acak}$_6$-\textsc{im} &	-\textsc{acak}$_6$-\textsc{sin}$_{10}$ 	& -\textsc{acak}$_6$ 	& -\textsc{acak}$_6$-\textsc{iz} &	-\textsc{acak}$_6$-\textsc{siniz}$_{10}$ &	-\textsc{acak}$_6$-\textsc{lar}$_{7}$ \\ \hline\hline
+                &   & -\textsc{acak}$_5$-\textsc{im}$_8$ &	-\textsc{acak}$_5$-\textsc{sin}$_8$ 	& -\textsc{acak}$_5$ 	& -\textsc{acak}$_5$-\textsc{iz}$_8$ &	-\textsc{acak}$_5$-\textsc{siniz}$_8$ &	-\textsc{acak}$_5$-\textsc{lar}$_6$ \\ \hline\hline
         DP    & Pe &yaptım &	yaptın &	yaptı &	yaptık &	yaptınız &	yaptılar \\
-	      &  &-\textsc{ti}$_6$-\textsc{im} &	-\textsc{ti}-\textsc{sin}$_{10}$ &	-\textsc{ti} &	-\textsc{ti}-\textsc{k} &	-\textsc{ti}-\textsc{siniz}$_{10}$ &	-\textsc{ti}-\textsc{lar}$_{7}$ \\ \hline
+	      &  &-\textsc{ti}$_5$-\textsc{im}$_8$ &	-\textsc{ti}$_5$-\textsc{sin}$_8$ &	-\textsc{ti}$_5$ &	-\textsc{ti}$_5$-\textsc{k}$_8$ &	-\textsc{ti}$_5$-\textsc{siniz}$_8$ &	-\textsc{ti}$_5$-\textsc{lar}$_6$ \\ \hline
                 & I & yapıyordum &	yapıyordun &	yapıyordu &	yapıyorduk &	yapıyordunuz &	yapıyorlardı \\ 
-		&  & -\textsc{iyor}$_6$-\textsc{du}$_8$-\textsc{im} &	-\textsc{iyor}$_6$-\textsc{du}$_8$-\textsc{sin}$_{10}$ &	-\textsc{iyor}$_6$-\textsc{du}$_8$ &	-\textsc{iyor}$_6$-\textsc{du}$_8$-\textsc{k} &	-\textsc{iyor}$_6$-\textsc{du}$_8$-\textsc{siniz}$_{10}$ &	-\textsc{iyor}$_6$-\textsc{lar}$_{7}$-\textsc{du}$_8$ \\ \hline\hline
+		&  & -\textsc{iyor}$_5$-\textsc{du}$_7$-\textsc{im}$_8$ &	-\textsc{iyor}$_5$-\textsc{du}$_7$-\textsc{sin}$_8$ &	-\textsc{iyor}$_5$-\textsc{du}$_7$ &	-\textsc{iyor}$_5$-\textsc{du}$_7$-\textsc{k}$_8$ &	-\textsc{iyor}$_5$-\textsc{du}$_7$-\textsc{siniz}$_8$ &	-\textsc{iyor}$_5$-\textsc{lar}$_6$-\textsc{du}$_7$ \\ \hline\hline
  I     & Pe & yapmışım &	yapmışsın &	yapmış &	yapmışız &	yapmışsınız &	yapmışlar \\
-       &  & -\textsc{mis}$_6$-\textsc{im} &	-\textsc{mis}$_6$-\textsc{sin}$_{10}$ &	-\textsc{mis}$_6$ &	-\textsc{mis}$_6$-\textsc{iz} &	-\textsc{mis}$_6$-\textsc{siniz}$_{10}$ &	-\textsc{mis}$_6$-\textsc{lar}$_{7}$ \\ \hline
+       &  & -\textsc{mis}$_5$-\textsc{im}$_8$ &	-\textsc{mis}$_5$-\textsc{sin}$_8$ &	-\textsc{mis}$_5$ &	-\textsc{mis}$_5$-\textsc{iz}$_8$ &	-\textsc{mis}$_5$-\textsc{siniz}$_8$ &	-\textsc{mis}$_5$-\textsc{lar}$_6$ \\ \hline
                & A & yaparmışım &	yaparmışsın &	yaparmış &	yaparmışız &	yaparmışsınız& 	yaparlarmış \\ 
-            &  & -\textsc{ar}-\textsc{mis}$_6$-\textsc{im} &	-\textsc{ar}-\textsc{mis}$_6$-\textsc{sin}$_{10}$ &	-\textsc{ar}-\textsc{mis}$_6$ &	-\textsc{ar}-\textsc{mis}$_6$-\textsc{iz} &	-\textsc{ar}-\textsc{mis}$_6$-\textsc{siniz}$_{10}$& 	-\textsc{ar}-\textsc{lar}$_{7}$-\textsc{mis}$_6$ \\ \hline
+            &  & -\textsc{ar}$_5$-\textsc{mis}$_7$-\textsc{im}$_8$ &	-\textsc{ar}$_5$-\textsc{mis}$_7$-\textsc{sin}$_8$ &	-\textsc{ar}$_5$-\textsc{mis}$_7$ &	-\textsc{ar}$_5$-\textsc{mis}$_7$-\textsc{iz}$_8$ &	-\textsc{ar}$_5$-\textsc{mis}$_7$-\textsc{siniz}$_8$& 	-\textsc{ar}$_5$-\textsc{lar}$_6$-\textsc{mis}$_7$ \\ \hline
                & I & yapıyormuşum &	yapıyormuşsun &	yapıyormuş &	yapıyormuşuz &	yapıyormuşsunuz &	yapıyorlarmuş \\
-               &              & -\textsc{iyor}-\textsc{mis}$_6$-\textsc{im} &	-\textsc{iyor}-\textsc{mis}$_6$-\textsc{sin}$_{10}$ &	-\textsc{iyor}-\textsc{mis}$_6$ &	-\textsc{iyor}-\textsc{mis}$_6$-UZ &	-\textsc{iyor}-\textsc{mis}$_6$-\textsc{sunuz} &	-\textsc{iyor}-\textsc{lar}$_{7}$-\textsc{mis}$_6$ \\
+	       &              & -\textsc{iyor}$_5$-\textsc{mis}$_7$-\textsc{im}$_8$ &	-\textsc{iyor}$_5$-\textsc{mis}$_7$-\textsc{sin}$_8$ &	-\textsc{iyor}$_5$-\textsc{mis}$_7$ &	-\textsc{iyor}$_5$-\textsc{mis}$_7$-\textsc{iz}$_8$ &	-\textsc{iyor}$_5$-\textsc{mis}$_7$-\textsc{sunuz}$_8$ &	-\textsc{iyor}$_5$-\textsc{lar}$_6$-\textsc{mis}$_7$ \\
 \end{tabular}
 }
-\caption{Paradigm of the Turkish verb \textit{yapmak}. This paradigm covers TAM and agreement suffixes (Slots 6, 7, 8, 10).}\label{tab:turkish-yapmak}
+\caption{Paradigm of the Turkish verb \textit{yapmak}. This paradigm covers TAM and agreement suffixes.}\label{tab:turkish-yapmak}
 \end{table}
 
 \begin{table}
@@ -268,10 +268,8 @@ TAM2      & MUS2$_7$ & Aorist/Imperfective, indirect & -mIş & \cite{schaaik2020
 %\hline
 %Poss Num/Pers & \\
 \hline
-Gen & \\
-\hline
 \end{tabular}
-	\caption{Verb suffixes in Turkish, arranged by slot. The first column describes slots as in the main paper. The second column lists the unique identifiers for each morpheme. The third column describes the function and meaning; the fourth column describes the phonological form (see Section~\ref{sec:vowel-harmony} for the meaning of the vowels I, A, E).}\label{tab:turkish-suffixes}
+	\caption{Verb suffixes in Turkish, arranged by slot. The first column describes slots as in the main paper. The second column lists the unique identifiers for each morpheme. The third column describes the function and meaning; the fourth column describes the approximate phonological form (see \citet[Section 5.1]{schaaik2020turkish} for the vowels I, A, E).}\label{tab:turkish-suffixes}
 \end{table}
 
 
@@ -320,20 +318,20 @@ Agreement (Obj+Subj)         & & See Table~\ref{tab:hungarian-paradigms} & \cite
 \begin{table}[]
     \centering
 \resizebox{\textwidth}{!}{
-    \begin{tabular}{lll||lll|lllllllllllll}
-	    &&& \multicolumn{3}{c|}{Singular} & \multicolumn{3}{c}{Plural} & Reference \\
+    \begin{tabular}{lll||lll|lll|llllllllll}
+	    &&& \multicolumn{3}{c|}{Singular} & \multicolumn{3}{c}{Plural} & \cite{rounds2001hungarian} \\
     &    & &  1 & 2 & 3 & 1 & 2 & 3 \\ \hline
 Ind & Pres   &  I    & teszek &	teszel &	tesz &	teszünk &	tesztek &	tesznek \\
     &        &       & csinálok &	csinálsz &	csinál &	csinálunk &	csináltok &	csinálnak \\
    &&&  ismerek &	ismersz &	ismer &	ismerünk &	ismertek &	ismernek \\
- &    &      & -ek & -sz & -- & -{\"u}nk & -tek & -nek & \cite{rounds2001hungarian} 4.3.1.1\\
- &    &      & -\textsc{ek}$_5$ &	-\textsc{el}$_5$ &	-- &	-\textsc{unk}$_5$ &	-\textsc{tek}$_5$ &	-\textsc{nek}$_5$  \\
+ &    &      & -ek & -sz & -- & -{\"u}nk & -tek & -nek &  4.3.1.1\\
+ &    &      & -\textsc{ek}$_{\textsc{Agr}}$ &	-\textsc{el}$_{\textsc{Agr}}$ &	-- &	-\textsc{unk}$_{\textsc{Agr}}$ &	-\textsc{tek}$_{\textsc{Agr}}$ &	-\textsc{nek}$_{\textsc{Agr}}$  \\
 	    \hline
    &&  D    & teszem &	teszed &	teszi &	tesszük &	teszitek &	teszik \\
    &&       & csinálom &	csinálod &	csinálja &	csináljuk &	csináljátok &	csinálják \\
   &&& ismerem &	ismered &	ismeri &ismerjük &	ismeritek &	ismerik \\
-    &&      & -em & -ed & -i & -j{\"u}k & -itek & -ik & \cite{rounds2001hungarian} 4.3.1.2\\
- && & -\textsc{em}$_5$ &	-\textsc{ed}$_5$ &	-\textsc{i}$_5$ &	-\textsc{iuk}$_5$ &	-\textsc{itek}$_5$ &	-\textsc{ik}$_5$  \\ 
+    &&      & -em & -ed & -i & -j{\"u}k & -itek & -ik &  4.3.1.2\\
+ && & -\textsc{em}$_{\textsc{Agr}}$ &	-\textsc{ed}$_{\textsc{Agr}}$ &	-\textsc{i}$_{\textsc{Agr}}$ &	-\textsc{iuk}$_{\textsc{Agr}}$ &	-\textsc{itek}$_{\textsc{Agr}}$ &	-\textsc{ik}$_{\textsc{Agr}}$  \\ 
 	    \hline
 %   && 2po      & teszlek \\ 
 %	    &&& -lek \\
@@ -341,29 +339,29 @@ Ind & Pres   &  I    & teszek &	teszel &	tesz &	teszünk &	tesztek &	tesznek \\
 & Past &     I    &tettem &	tettél &	tett &	tettünk &	tettetek &	tettek \\
 &      &          & csináltam &	csináltál &	csinált &	csináltunk &	csináltatok &	csináltak \\
 &&&ismertem &	ismertél &	ismert &	ismertünk &	ismertetek &	ismertek \\
-	    &  &        &-t-em & -t-{\'e}l & -t & -t-{\"u}nk & -t-etek & -t-ek &  (\cite{rounds2001hungarian} 4.3.3.1\\
-	    &  &         &-\textsc{t}$_3$-\textsc{em}$_5$ &	-\textsc{t}$_3$-\textsc{eel}$_5$ &	-\textsc{t}$_5$ &	-\textsc{t}-\textsc{unk}$_5$ &	-\textsc{t}$_3$-\textsc{etek}$_5$ &	-\textsc{t}$_3$-\textsc{ek}$_5$ &\\ 
+	    &  &        &-t-em & -t-{\'e}l & -t & -t-{\"u}nk & -t-etek & -t-ek &   4.3.3.1\\
+	    &  &         &-\textsc{t}$_{\textsc{Tense}}$-\textsc{em}$_{\textsc{Agr}}$ &	-\textsc{t}$_{\textsc{Tense}}$-\textsc{eel}$_{\textsc{Agr}}$ &	-\textsc{t}$_{\textsc{Agr}}$ &	-\textsc{t}$_{\textsc{Tense}}$-\textsc{unk}$_{\textsc{Agr}}$ &	-\textsc{t}$_{\textsc{Tense}}$-\textsc{etek}$_{\textsc{Agr}}$ &	-\textsc{t}$_{\textsc{Tense}}$-\textsc{ek}$_{\textsc{Agr}}$ &\\ 
 	    \hline
  & &   D    &tettem &	tetted &	tette &	tettük &	tettétek &	tették \\
  & &        & csináltam &	csináltad &	csinálta &	csináltuk &	csináltátok &	csinálták \\
 &&& ismertem &	ismerted &	ismerte &	ismertük &	ismertétek 	&ismerték \\
-	    &  &      & -t-em & -t-ed & -t-e & -t-{\"u}k & -t-{\'e}tek & -t-{\'e}k &  (\cite{rounds2001hungarian} 4.3.3.2 \\
-	    & &       &-\textsc{t}-EM$_5$ &	-\textsc{t}-ED$_5$ &	-\textsc{t}-I$_5$ &	-\textsc{t}-UK$_5$ &	-\textsc{t}-EETEK$_5$ &	-\textsc{t}-\textsc{eek}$_5$  & \\ 
+	    &  &      & -t-em & -t-ed & -t-e & -t-{\"u}k & -t-{\'e}tek & -t-{\'e}k &   4.3.3.2 \\
+	    & &       &-\textsc{t}$_{\textsc{Tense}}$-\textsc{em}$_{\textsc{Agr}}$ &	-\textsc{t}$_{\textsc{Tense}}$-\textsc{ed}$_{\textsc{Agr}}$ &	-\textsc{t}$_{\textsc{Tense}}$-\textsc{i}$_{\textsc{Agr}}$ &	-\textsc{t}$_{\textsc{Tense}}$-\textsc{uk}$_{\textsc{Agr}}$ &	-\textsc{t}$_{\textsc{Tense}}$-\textsc{eetek}$_{\textsc{Agr}}$ &	-\textsc{t}$_{\textsc{Tense}}$-\textsc{eek}$_{\textsc{Agr}}$  & \\ 
 	    \hline
 %  &&       &tettelek  & (\cite{rounds2001hungarian} 4.3.3.2) \\ 
-%	    &&       & -\textsc{t}-\textsc{elek} \\
+%	    &&       & -\textsc{t}$_{	extsc{Tense}}$-\textsc{elek} \\
 %  \hline
 Cond  &Pres &   I    &tennék &	tennél &	tenne &	tennénk &	tennétek &	tennének \\
       &     &        & csinálnék &	csinálnál &	csinálna &	csinálnánk 	&csinálnátok &	csinálnának \\
   &&&    ismernék &	ismernél &	ismerne &	ismernénk &	ismernétek &	ismernének \\
-  &&& -n{\'e}k & -n{\'e}l & -ne & -n{\'e}nk & -n{\'e}tek & -n{\'e}nek & (\cite{rounds2001hungarian} 4.3.7.1\\
-  & &   I    &-\textsc{ne}$_2$-EK &	-\textsc{ne}$_2$-EL &	-\textsc{ne}$_2$ &	-\textsc{ne}$_2$-ENK &	-\textsc{ne}$_2$-ETEK &	-\textsc{ne}$_2$-\textsc{enek}  \\
+  &&& -n{\'e}k & -n{\'e}l & -ne & -n{\'e}nk & -n{\'e}tek & -n{\'e}nek &  4.3.7.1\\
+	    & &   I    &-\textsc{ne}$_{\textsc{Mood}}$-\textsc{ek} &	-\textsc{ne}$_{\textsc{Mood}}$-\textsc{el} &	-\textsc{ne}$_{\textsc{Mood}}$ &	-\textsc{ne}$_{\textsc{Mood}}$-\textsc{enk} &	-\textsc{ne}$_{\textsc{Mood}}$-\textsc{etek} &	-\textsc{ne}$_{\textsc{Mood}}$-\textsc{enek}  \\
   \hline
    &&  D    &tenném &	tennéd &	tenné &	tennénk &	tennétek &	tennék \\
    &&       & csinálnám &	csinálnád &	csinálná &	csinálnánk &	csinálnátok &	csinálnák \\
  &&&  ismerném &	ismernéd &	ismerné &	ismernénk 	&ismernétek &	ismernék \\
-&&&     -n{\'e}m & -n{\'e}d & -n{\'e} & -n{\'e}nk & -n{\'e}tek & -n{\'e}k &  (\cite{rounds2001hungarian} 4.3.7.2\\ 
-&&      &-\textsc{ne}$_2$-EM &	-\textsc{ne}$_2$-ED &	-\textsc{ne}$_2$-E &	-\textsc{ne}$_2$-ENK &	-\textsc{ne}$_2$-ETEK &	-\textsc{ne}$_2$-EK  \\
+&&&     -n{\'e}m & -n{\'e}d & -n{\'e} & -n{\'e}nk & -n{\'e}tek & -n{\'e}k &   4.3.7.2\\ 
+	    &&      &-\textsc{ne}$_{\textsc{Mood}}$-\textsc{em}$_{\textsc{Agr}}$ &	-\textsc{ne}$_{\textsc{Mood}}$-\textsc{ed}$_{\textsc{Agr}}$ &	-\textsc{ne}$_{\textsc{Mood}}$-\textsc{e}$_{\textsc{Agr}}$ &	-\textsc{ne}$_{\textsc{Mood}}$-\textsc{enk}$_{\textsc{Agr}}$ &	-\textsc{ne}$_{\textsc{Mood}}$-\textsc{etek}$_{\textsc{Agr}}$ &	-\textsc{ne}$_{\textsc{Mood}}$-\textsc{ek}$_{\textsc{Agr}}$  \\
 	    \hline
 %	    && -n{\'e}lek  \\
 %	    && -\textsc{ne}-\textsc{lek} \\
@@ -373,8 +371,8 @@ Subj & Pres & I         &tegyek &	tégy or tegyél &	tegyen &	tegyünk &	tegyete
 csináljál &	csináljon &	csináljunk& 	csináljatok &	csináljanak \\
 &&&ismerjek &	ismerj or
 ismerjél &	ismerjen &	ismerjünk &	ismerjetek &	ismerjenek \\
- & &          & -j-ek & -j-({\'e}l) & -j-en & -j-{\"u}nk & -j-etek & -j-enek  & \cite{rounds2001hungarian} 4.3.5.1\\
- &  &          &-\textsc{j}$_2$-\textsc{ek} &	\textsc{j}$_2$-\textsc{eel} &	-\textsc{j}$_2$-\textsc{en} &	-\textsc{j}$_2$-UNK &	-\textsc{j}$_2$-ETEK &	-\textsc{j}$_2$-\textsc{enek}\\
+ & &          & -j-ek & -j-({\'e}l) & -j-en & -j-{\"u}nk & -j-etek & -j-enek  &  4.3.5.1\\
+	    &  &          &-\textsc{j}$_{\textsc{Mood}}$-\textsc{ek} &	\textsc{j}$_{\textsc{Mood}}$-\textsc{eel} &	-\textsc{j}$_{\textsc{Mood}}$-\textsc{en} &	-\textsc{j}$_{\textsc{Mood}}$-\textsc{unk} &	-\textsc{j}$_{\textsc{Mood}}$-\textsc{etek} &	-\textsc{j}$_{\textsc{Mood}}$-\textsc{enek}\\
  \hline
 &&D         &tegyem &	tedd or tegyed &	tegye &	tegyük& 	tegyétek &	tegyék \\
 &&          & csináljam &	csináld or
@@ -382,8 +380,8 @@ csináljad &	csinálja &	csináljuk &	csináljátok &	csinálják \\
 &&&ismerjem &	ismerd or
 ismerjed &	ismerje &	ismerjük &	ismerjétek & ismerjék
  \\
-  &&       & -j-em & -j-ed & -j-e & -j-{\"u}k & -j-{\'e}tek & -j-{\'e}k & (\cite{rounds2001hungarian} 4.3.5.2\\
-&&         &-\textsc{j}$_2$-\textsc{em}$_5$ &	-\textsc{j}$_2$-\textsc{ED}$_5$ &	-\textsc{j}$_2$-E$_5$ &	-\textsc{j}$_2$-UK$_5$ & 	-\textsc{j}$_2$-\textsc{eetek}$_5$ &	-\textsc{j}$_2$-\textsc{eek}$_5$-\\ 
+  &&       & -j-em & -j-ed & -j-e & -j-{\"u}k & -j-{\'e}tek & -j-{\'e}k &  4.3.5.2\\
+&&         &-\textsc{j}$_{\textsc{Mood}}$-\textsc{em}$_{\textsc{Agr}}$ &	-\textsc{j}$_{\textsc{Mood}}$-\textsc{ed}$_{\textsc{Agr}}$ &	-\textsc{j}$_{\textsc{Mood}}$-\textsc{e}$_{\textsc{Agr}}$ &	-\textsc{j}$_{\textsc{Mood}}$-\textsc{uk}$_{\textsc{Agr}}$ & 	-\textsc{j}$_{\textsc{Mood}}$-\textsc{eetek}$_{\textsc{Agr}}$ &	-\textsc{j}$_{\textsc{Mood}}$-\textsc{eek}$_{\textsc{Agr}}$\\ 
 	    \hline
  % &&       &tegyelek & (\cite{rounds2001hungarian} 4.3.5.2)\\
 %	    &&& \textsc{j}-\textsc{elek} \\
@@ -490,58 +488,97 @@ However, this is rare in the data, occurring only three times in the training se
 %\end{tabular}
 
 
-\section{Controlling for Vowel Harmony}\label{sec:vowel-harmony}
-%\subsection{Vowel Harmony in Turkish}
-
-%\url{https://turkishexplained.com/vh1.htm}
-
-We represent words as sequences of abstract morphemes.
-In many languages, morphemes are subject to morphophonological changes depending on the other morphemes that they occur with, which means that morphemes can be expressed as different phoneme sequences depending on the environment.
-Such changes could be taken into account by explicitly distinguishing between different phonological expressions of the same morpheme.
-In most cases, such morphophonological processes only affect neighboring morphemes, but sometimes they involve interactions between non-adjacent morphemes.
-We asked whether our findings about the efficiency of verb suffix ordering continues to hold when explicitly account for morphophonological interactions between non-adjacent morphemes.
-
-Among the languages in our sample, this is instantiated most extensively by Turkish vowel harmony.
-Turkish vowel harmony can largely be described in terms of two underlying vowels ``A'' and ``I'' whose realization depends on the last preceding vowel, as follows:
-
-\begin{center}
-    \begin{tabular}{l|llllll}
-        Preceding & A & I \\ \hline
-        a, I & a & I \\
-        e, i & e & i \\
-        o, u & a & u \\
-        {\"o}, {\"u} & e & {\"u}
-    \end{tabular}
-\end{center}
-
-For most suffixes, vowel harmony can be encoded in terms of one underlying form (see Table~\ref{tab:turkish-suffixes}).
-The suffix AR$_6$ has the form ``Ar'' after most monosyllabic stems, and ``Ir'' after multisyllabic stems or one of 13 exceptional monosyllabic stems.
-
-Vowel harmony can create dependencies between non-adjacent morphemes because the vowel of one morpheme can determine the vowels of multiple subsequent morphemes containing the vowels A or I.
-
-We asked whether our findings about the efficiency of verb suffix ordering continues to hold when explicitly account for vowel harmony.
-That is, we applied the same rules for vowel harmony to hypothetical affix orderings, and encoded realizations of the same morpheme differently when they are assigned different vowels.
-We repeated the same experiments as in the main paper, (i) comparing the AUC to other orderings, and (ii) comparing the optimized and real orderings.
-Results are shown in Figure~\ref{fig:turkish-harmony-results}.
-
-Real orderings have a lower AUC than almost all alternative orderings even when taking vowel harmony into account.
-Furthermore, optimized orderings recover the real orderings with higha ccuracy both in the ordering of the slots and in predicting orders for forms in the dataset \mhahn{TODO result}.
-
-
+%\section{Controlling for Vowel Harmony}\label{sec:vowel-harmony}
+%%\subsection{Vowel Harmony in Turkish}
+%
+%%\url{https://turkishexplained.com/vh1.htm}
+%
+%We represent words as sequences of abstract morphemes.
+%In many languages, morphemes are subject to morphophonological changes depending on the other morphemes that they occur with, which means that morphemes can be expressed as different phoneme sequences depending on the environment.
+%Such changes could be taken into account by explicitly distinguishing between different phonological expressions of the same morpheme.
+%In most cases, such morphophonological processes only affect neighboring morphemes, but sometimes they involve interactions between non-adjacent morphemes.
+%We asked whether our findings about the efficiency of verb suffix ordering continues to hold when explicitly account for morphophonological interactions between non-adjacent morphemes.
+%
+%Among the languages in our sample, this is instantiated most extensively by Turkish vowel harmony.
+%Turkish vowel harmony can largely be described in terms of two underlying vowels ``A'' and ``I'' whose realization depends on the last preceding vowel, as follows:
+%
+%\begin{center}
+%    \begin{tabular}{l|llllll}
+%        Preceding & A & I \\ \hline
+%        a, I & a & I \\
+%        e, i & e & i \\
+%        o, u & a & u \\
+%        {\"o}, {\"u} & e & {\"u}
+%    \end{tabular}
+%\end{center}
+%
+%For most suffixes, vowel harmony can be encoded in terms of one underlying form (see Table~\ref{tab:turkish-suffixes}).
+%The suffix AR$_6$ has the form ``Ar'' after most monosyllabic stems, and ``Ir'' after multisyllabic stems or one of 13 exceptional monosyllabic stems.
+%
+%Vowel harmony can create dependencies between non-adjacent morphemes because the vowel of one morpheme can determine the vowels of multiple subsequent morphemes containing the vowels A or I.
+%
+%We asked whether our findings about the efficiency of verb suffix ordering continues to hold when explicitly account for vowel harmony.
+%That is, we applied the same rules for vowel harmony to hypothetical affix orderings, and encoded realizations of the same morpheme differently when they are assigned different vowels.
+%We repeated the same experiments as in the main paper, (i) comparing the AUC to other orderings, and (ii) comparing the optimized and real orderings.
+%Results are shown in Figure~\ref{fig:turkish-harmony-results}.
+%
+%Real orderings have a lower AUC than almost all alternative orderings even when taking vowel harmony into account.
+%Furthermore, optimized orderings recover the real orderings with high accuracy both in the ordering of the slots and in predicting orders for forms in the dataset \mhahn{TODO result}.
+%
+%
 \section{Other Measures of Accuracy}
 
+Here we report results using two alternative measures of accuracy.
+\textsc{FullAccuracy} measures the fraction of forms in the corpus that are ordered entirely correctly (Figure~\ref{tab:optimized_acc_verbs_full}).
+\textsc{FullTypeAccuracy} modifies this by disregarding repeated occurrences of the same form in the corpus (Figure~\ref{tab:optimized_acc_verbs_full_types}).
+Results across these two measures and the one reported in the main paper strongly agree both numerically and in the qualitative patterns of the comparison between optimized orderings and baselines.
 
-
+%
+%
+%
 \begin{figure}[]
     \centering
-\includegraphics[width=0.8\textwidth]{figures/accuracies_verbs.pdf}
-    \caption{Accuracies in predicting verb morpheme ordering.
+\includegraphics[width=0.8\textwidth]{figures/accuracies_verbs_full.pdf}
+    \caption{Accuracies in predicting verb morpheme ordering, according to the \textsc{FullAccuracy} measure.
     For the baselines, we provide both a smoothed violin plot of the distribution of accuracies, and the mean accuracy as a horizontal line (green and blue). For the optimized order, we show the accuracy as a horizontal line (red).
     In all languages, optimized orderings provide higher accuracy than the mean of the random baselines at $p<0.001$.}
-    \label{tab:optimized_acc_verbs}
+    \label{tab:optimized_acc_verbs_full}
 \end{figure}
+%
+\begin{figure}[]
+    \centering
+\includegraphics[width=0.8\textwidth]{figures/accuracies_verbs_full_types.pdf}
+    \caption{Accuracies in predicting verb morpheme ordering, according to the \textsc{FullTypeAccuracy} measure.
+    For the baselines, we provide both a smoothed violin plot of the distribution of accuracies, and the mean accuracy as a horizontal line (green and blue). For the optimized order, we show the accuracy as a horizontal line (red).
+    In all languages, optimized orderings provide higher accuracy than the mean of the random baselines at $p<0.001$.}
+    \label{tab:optimized_acc_verbs_full_types}
+\end{figure}
+%
 
 
+
+
+%\section{Other Models}
+%
+%
+%\subsection{Scope-Based Ordering}
+%
+%
+%
+%\subsection{Complexity-Based Ordering}
+%
+%\subsection{Inkelas 2016}
+%
+%Drawing on the notion of informativity defined by \citet{priva2017informativity}, \citet{inkelas2016affix} considered the informativity between a suffix $S_i$ and the preceding $S_{i-1}$ as
+%\begin{equation}
+%    \sum_{S_{i-1}, S_{i}} \frac{P(S_{i-1} , S_i)}{P(S_i)} \log P(S_i | S_{i-1})
+%\end{equation}
+%%They tested this idea in a pilot study of Turkish, finding preliminary evidence that high-informativity suffixes are closer to the root.
+%This notion of informativity is similar to $I_1$, only differing in whether the $P(S_i)$ term occurs inside the logarithm:
+%\begin{equation}
+%   I_1 = \sum_{S_{i-1}, S_{i}} P(S_{i-1} , S_i) \log \frac{P(S_i | S_{i-1})}{P(S_i)}
+%\end{equation}
+%
 
 \bibliography{literature}
 \bibliographystyle{natbib}
