--- a/literature.bib
+++ b/literature.bib
@@ -58411,3 +58411,48 @@ pages={1707--1713}}
 }
 
 
+@book{UDFinnish-FTB,
+	author="Piitulainen, Jussi and Nurmi, Hanna",
+	title="UD Finnish-FTB, Version 2.6",
+	url="https://github.com/UniversalDependencies/UD_Finnish-FTB",
+		year="2020"
+}
+
+
+@inproceedings{DBLP:conf/lrec/NivreMGHMPSTZ20,
+  author    = {Joakim Nivre and
+               Marie{-}Catherine de Marneffe and
+               Filip Ginter and
+               Jan Hajic and
+               Christopher D. Manning and
+               Sampo Pyysalo and
+               Sebastian Schuster and
+               Francis M. Tyers and
+               Daniel Zeman},
+  editor    = {Nicoletta Calzolari and
+               Fr{\'{e}}d{\'{e}}ric B{\'{e}}chet and
+               Philippe Blache and
+               Khalid Choukri and
+               Christopher Cieri and
+               Thierry Declerck and
+               Sara Goggi and
+               Hitoshi Isahara and
+               Bente Maegaard and
+               Joseph Mariani and
+               H{\'{e}}l{\`{e}}ne Mazo and
+               Asunci{\'{o}}n Moreno and
+               Jan Odijk and
+               Stelios Piperidis},
+  title     = {Universal Dependencies v2: An Evergrowing Multilingual Treebank Collection},
+  booktitle = {Proceedings of The 12th Language Resources and Evaluation Conference,
+               {LREC} 2020, Marseille, France, May 11-16, 2020},
+  pages     = {4034--4043},
+  publisher = {European Language Resources Association},
+  year      = {2020},
+  url       = {https://www.aclweb.org/anthology/2020.lrec-1.497/},
+  timestamp = {Fri, 29 May 2020 18:13:34 +0200},
+  biburl    = {https://dblp.org/rec/conf/lrec/NivreMGHMPSTZ20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
